--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Sotheby's Wine Ship Quote Lookup</title><!-- FWIW Version 1.0.0 -->
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Exo:500italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="stylesheet/normalize.css">
-        <link rel="stylesheet" href="stylesheet/grid.css">
-        <link rel="stylesheet" href="stylesheet/style.css">
+        <link rel="stylesheet" href="stylesheets/normalize.css">
+        <link rel="stylesheet" href="stylesheets/grid.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
         
         </head>
         <body onLoad="document.FedExRateForm.submit()">
